[package]
name = "ad-ldap-walk"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.34"
env_logger = "0.11.3"
log = "0.4.11"
ldap3 = "0.11.4"
rpassword = "7.3.1"
structopt = { version = "0.3.20", default-features = false }
tokio = { version = "1.38.0", features = ["full"] }

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "2.0.0"